--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -4945,7 +4945,7 @@
   device:
     type: phablet
     brand: Xiaomi
-    model: MI Note LTE
+    model: Mi Note LTE
   os_family: Android
   browser_family: Android Browser
 -
@@ -4963,7 +4963,7 @@
   device:
     type: phablet
     brand: Xiaomi
-    model: MI Note Pro
+    model: Mi Note Pro
   os_family: Android
   browser_family: Unknown
 -
@@ -6876,5 +6876,23 @@
     type: phablet
     brand: Xiaomi
     model: Redmi Note 5A
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; M10 Ultra) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.77 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 91.0.4472.77
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: ""
+    model: M10 Ultra
   os_family: Android
   browser_family: Chrome
