--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -24188,6 +24188,12 @@ M-Horse:
     - regex: 'Pure ?([13]|2A)(?:[);/ ]|$)'
       model: 'Pure $1'
 
+# ProVision (www.provision.co.ir/en)
+ProVision:
+  regex: 'ProVision (S1)(?:[);/ ]|$)'
+  device: 'tv'
+  model: '$1'
+
 # Devices with undectable brand, but detectable model
 Unknown:
   regex: 'WebTV/(\d+\.\d+)|(?:M10 Ultra)(?:[);/ ]|$)'
