--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -597,6 +597,11 @@
   name: 'Google Fiber TV'
   version: '$1'
 
+# QuickCast (https://play.google.com/store/apps/details?id=com.wukongtv.wkcast.intl)
+- regex: 'QuickCast$'
+  name: 'QuickCast'
+  version: ''
+
 # https://www.n-tv.de/
 - regex: 'ntvmobil/'
   name: 'NTV Mobil'
