--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -641,3 +641,9 @@
     type: mobile app
     name: AliExpress
     version: 8.5.1
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Blue Proxy/1.0.18 Chrome/74.0.3729.157 Mobile Safari/537.36
+  client:
+    type: mobile app
+    name: Blue Proxy
+    version: 1.0.18
